# ashtech

./: .clang-format  .gitignore  CMakeLists.txt  README.md
ashtech/: CMakeLists.txt
ashtech/include/: ashtech.hxx  ashtech_api_registry.h  ashtech_app.hxx  ashtech_thing.h
ashtech/src/: ashtech_api_registry.c  ashtech_app.cxx  ashtech_thing.c
core/: CMakeLists.txt
core/include/at/: api_registry.h  ashtech.h
core/src/: api_registry.c  thing.c
examples/sandbox/: CMakeLists.txt
examples/sandbox/src/: sandbox_entrypoint.c
plugins/ashtech_window/: CMakeLists.txt
plugins/ashtech_window/include/: ashtech_window.h
plugins/ashtech_window/src/: ashtech_window.c
plugins/window/: CMakeLists.txt
plugins/window/src/: window.c
sandbox/: CMakeLists.txt
sandbox/src/: sandbox_main.cxx
scripts/: build_vendor.ps1
src/: main.c
